# chimera-beam

./: .gitignore  Cargo.toml  Chimera.adapter.toml  Chimera.separate.toml  Chimera.toml  LICENSE  README.md  rust-toolchain.toml  zig.version
.github/workflows/: ci.yml
benches/: Cargo.toml  vm_benchmarks.rs
benches/src/: main.rs
chimerair/: main.c
crates/chimera_beam_term/: Cargo.toml
crates/chimera_beam_term/src/: atom.rs  iff.rs  lib.rs  mfa.rs  module.rs
crates/chimera_erlang_beam_abi/: Cargo.toml  build.rs
crates/chimera_erlang_beam_abi/src/: heap_kernels.rs  lib.rs
crates/chimera_erlang_beam_allocator/: Cargo.toml
crates/chimera_erlang_beam_allocator/src/: lib.rs
crates/chimera_erlang_beam_bif/: Cargo.toml
crates/chimera_erlang_beam_bif/src/: lib.rs
crates/chimera_erlang_beam_code/: Cargo.toml
crates/chimera_erlang_beam_code/src/: atoms.rs  code_header.rs  hot_code.rs  iff.rs  lib.rs  mfa.rs  symbols.rs
crates/chimera_erlang_beam_core/: .gitignore  Cargo.toml
crates/chimera_erlang_beam_core/src/: lib.rs
crates/chimera_erlang_beam_dist/: Cargo.toml
crates/chimera_erlang_beam_dist/src/: lib.rs
crates/chimera_erlang_beam_examples/: Cargo.toml
crates/chimera_erlang_beam_examples/src/: main.rs
crates/chimera_erlang_beam_frontend/: README.md  dune-project
crates/chimera_erlang_beam_frontend/src/: beam_gen.ml  core_ir.ml  dune  lexer.mll  parser.mly
crates/chimera_erlang_beam_frontend/test/: parser_tests.ml
crates/chimera_erlang_beam_heap/: Cargo.toml
crates/chimera_erlang_beam_heap/src/: gc.rs  heap_verifier.rs  lib.rs  off_heap_binary.rs  roots.rs  yieldable_gc.rs
crates/chimera_erlang_beam_instr/: Cargo.toml
crates/chimera_erlang_beam_instr/proptest-regressions/: lib.txt
crates/chimera_erlang_beam_instr/src/: lib.rs
crates/chimera_erlang_beam_jit/: CMakeLists.txt  Cargo.toml  build.rs
crates/chimera_erlang_beam_jit/include/: codegen.h  ir.h  jit.h
crates/chimera_erlang_beam_jit/src/: codegen.cpp  ir.cpp  jit.cpp  lib.rs
crates/chimera_erlang_beam_nif/: Cargo.toml
crates/chimera_erlang_beam_nif/src/: lib.rs
crates/chimera_erlang_beam_process/: Cargo.toml
crates/chimera_erlang_beam_process/src/: lib.rs
crates/chimera_erlang_beam_runtime/: Cargo.toml
crates/chimera_erlang_beam_runtime/src/: lib.rs  main.rs
crates/chimera_erlang_beam_scheduler/: Cargo.toml
crates/chimera_erlang_beam_scheduler/src/: dirty.rs  lib.rs  metrics.rs
crates/chimera_erlang_beam_term/: Cargo.toml
crates/chimera_erlang_beam_term/src/: atom.rs  boxed.rs  etf.rs  lib.rs  pid.rs
crates/chimera_erlang_beam_timer/: Cargo.toml
crates/chimera_erlang_beam_timer/src/: lib.rs
crates/chimera_erlang_beam_trace/: Cargo.toml
crates/chimera_erlang_beam_trace/src/: lib.rs
crates/chimera_erlang_beam_vm/: Cargo.toml
crates/chimera_erlang_beam_vm/src/: bif_dispatch.rs  boot.rs  lib.rs
docs/: design.md
fuzz/: Cargo.toml
fuzz/corpus/etf/: small_tuple.etf
fuzz/src/: etf_decoder.rs  instruction_decoder.rs  term_parsing.rs
include/: beamz_abi.h
scripts/: validate-deps.sh  validate-tasks.sh
zig/: build.zig  build.zig.zon
zig/src/: etf.zig  heap.zig  main.zig  root.zig
