[package]
name = "chimera_erlang_beam_code"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chimera_erlang_beam_core = { workspace = true }
rzx_beam_term = { workspace = true }

[lints]
workspace = true
[dev-dependencies]
chimera_erlang_beam_allocator = { workspace = true }
