[package]
name = "chimera_erlang_beam_heap"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chimera_erlang_beam_term = { workspace = true }
chimera_erlang_beam_abi = { workspace = true }

[features]
default = []
zig-kernels = []

[lints]
workspace = true

[dev-dependencies]
chimera_erlang_beam_allocator = { workspace = true }
