[package]
name = "chimera_erlang_beam_instr"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chimera_erlang_beam_term = { workspace = true }
chimera_erlang_beam_heap = { workspace = true }

[dev-dependencies]
chimera_erlang_beam_allocator = { workspace = true }
proptest = { workspace = true }

[lints]
workspace = true
