[package]
name = "chimera_erlang_beam_scheduler"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chimera_erlang_beam_process = { workspace = true }
chimera_erlang_beam_term = { workspace = true }
chimera_erlang_beam_timer = { workspace = true }
chimera_erlang_beam_instr = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
chimera_erlang_beam_allocator = { workspace = true }
