[package]
name = "chimera_erlang_beam_trace"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chimera_erlang_beam_term = { workspace = true }
chimera_erlang_beam_core = { workspace = true }

[lints]
workspace = true
[dev-dependencies]
chimera_erlang_beam_allocator = { workspace = true }
